# QGeoView-Map-Widget

./: CMakeLists.txt  HOWTO.md  QGVCamera_8h_source.html  QGVGlobal_8h_source.html  QGVImage_8h_source.html  QGVLayerBDGEx_8h_source.html  QGVLayerBing_8h_source.html  QGVLayerGoogle_8h_source.html  QGVLayerOSM_8h_source.html  QGVLayerTilesOnline_8h_source.html  QGVLayerTiles_8h_source.html  QGVProjectionEPSG3857_8h_source.html  QGVProjection_8h_source.html  QGeoView.pro  README.md  annotated.html  classQGVItem.html  classQGVLayerBDGEx-members.html  classQGVLayerBDGEx.html  classQGVLayerTiles.html  classQGVLayerTilesOnline.html  classes.html  files.html  hierarchy.html
demo/samples/: rectangle.cpp
samples/background/: background.pro  mainwindow.cpp
samples/basic/: basic.pro  mainwindow.cpp  mainwindow.h
samples/flags/: flags.pro  mainwindow.cpp  mainwindow.h
samples/mouse-actions/: main.cpp  mainwindow.cpp  mainwindow.h  mouse-actions.pro
samples/moving-objects/: mainwindow.cpp  mainwindow.h  moving-objects.pro
samples/shared/: CMakeLists.txt  ellipse.cpp  ellipse.h  helpers.cpp  helpers.h  placemarkcircle.cpp  placemarkcircle.h  rectangle.cpp  rectangle.h  shared.pri
samples/widgets/: mainwindow.cpp  mainwindow.h  widgets.pro
search/: all_1.js  classes_0.js  classes_1.js
