cmake_minimum_required(VERSION 3.0 FATAL_ERROR)

project(QGeoView LANGUAGES C CXX)

add_subdirectory(lib)
add_subdirectory(demo)
add_subdirectory(samples/shared)
add_subdirectory(samples/basic)
add_subdirectory(samples/background)
add_subdirectory(samples/widgets)
add_subdirectory(samples/flags)
add_subdirectory(samples/moving-objects)
